<resources>
    <string name="app_name">TransitThere</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="about_app">About App</string>
    <string name="data_sources">Data Sources</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="starting_point">Starting point</string>
    <string name="destination">Destination</string>
    <string name="transit_error">No routes available</string>
    <string name="stops">stops</string>
    <string name="publictransport">Public Transport</string>
    <string name="walking">Walking</string>
    <string name="slight_delay">Slight delay</string>
    <string name="student">Student</string>
    <string name="adult">Adult</string>
    <string name="seniorcitizens">Senior Citizens</string>
    <string name="chooselanguage">Choose your preferred language</string>
    <string-array name="fare_types_array">
        <item>@string/adult</item>
        <item>@string/seniorcitizens</item>
        <item>@string/student</item>
    </string-array>
    <string name="leastTime">Shortest Time</string>
    <string name="leastDistance">Shortest Distance</string>
    <string name="leastWalking">Least Walking</string>
    <string-array name="sort_by_array">
        <item>@string/leastTime</item>
        <item>@string/leastDistance</item>
        <item>@string/leastWalking</item>
    </string-array>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">min</string>
    <string name="minutes">mins</string>
    <string name="secs">secs</string>
    <string name="arriving">Arriving</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="refreshingdata">Refreshing data...</string>
    <string name="fair">Fair</string>
    <string name="partcloudy">Partly Cloudy</string>
    <string name="cloudy">Cloudy</string>
    <string name="lightshowers">Light Showers</string>
    <string name="showers">Showers</string>
    <string name="thunderyshowers">Thundery Showers</string>
    <string name="suggestedroute">* Suggested Route *</string>
    <string name="slightdelay">Slight delay</string>
    <string name="walk">Walk</string>
    <string name="km">km</string>
    <string name="m">m</string>
    <string name="dummy">Lorem imposummmmm</string>
    <string name="collapsed">Collapsed</string>
    <string name="dragging">Dragging</string>
    <string name="expanded">Expanded</string>
    <string name="hidden">Hidden</string>
    <string name="settling">Settling</string>
    <string name="undefined">Undefined</string>
    <string name="offset">Offset: %f</string>
    <string name="peek_me">Peek me!</string>
    <string name="drag_me">Drag me!</string>
    <string name="modal">Modal bottom sheet</string>
    <string name="_4_min">X min</string>
    <string name="no_bus_service_available_at_this_time">No bus service available at this time</string>
    <string name="favorites">Favourites</string>
    <string name="nearby">Nearby</string>
    <string name="directions">Directions</string>
    <string name="current_weather">Current Weather</string>
    <string name="degree">°C</string>
    <string name="uvIndex">UV Index</string>
    <string name="language">Language Preferences</string>
    <string name="help">Help</string>
    <string name="appguide">App Guide</string>
    <string name="about">About</string>
    <string name="mrt_station">MRT Station</string>
    <string name="displayfares">Displaying Fares for:</string>
    <string name="sortby">Sort By:</string>
    <string name="AngMoKio">Ang Mo Kio</string>
    <string name="Bedok">Bedok</string>
    <string name="Bishan">Bishan</string>
    <string name="BoonLay">Boon Lay</string>
    <string name="BukitBatok">Bukit Batok</string>
    <string name="BukitMerah">Bukit Merah</string>
    <string name="BukitPanjang">Bukit Panjang</string>
    <string name="BukitTimah">Bukit Timah</string>
    <string name="CentralWaterCatchment">Central Water Catchment</string>
    <string name="Changi">Changi</string>
    <string name="ChoaChuKang">Choa Chu Kang</string>
    <string name="Clementi">Clementi</string>
    <string name="City">City</string>
    <string name="Geylang">Geylang</string>
    <string name="Hougang">Hougang</string>
    <string name="JalanBahar">Jalan Bahar</string>
    <string name="JurongEast">Jurong East</string>
    <string name="JurongIsland">Jurong Island</string>
    <string name="JurongWest">Jurong West</string>
    <string name="Kallang">Kallang</string>
    <string name="LimChuKang">Lim Chu Kang</string>
    <string name="Mandai">Mandai</string>
    <string name="MarineParade">Marine Parade</string>
    <string name="Novena">Novena</string>
    <string name="PasirRis">Pasir Ris</string>
    <string name="PayaLebar">Paya Lebar</string>
    <string name="Pioneer">Pioneer</string>
    <string name="PulauTekong">Pulau Tekong</string>
    <string name="PulauUbin">Pulau Ubin</string>
    <string name="Punggol">Punggol</string>
    <string name="Queenstown">Queenstown</string>
    <string name="Seletar">Seletar</string>
    <string name="Sembawang">Sembawang</string>
    <string name="Sengkang">Sengkang</string>
    <string name="Sentosa">Sentosa</string>
    <string name="Serangoon">Serangoon</string>
    <string name="SouthernIslands">Southern Islands</string>
    <string name="SungeiKadut">Sungei Kadut</string>
    <string name="Tampines">Tampines</string>
    <string name="Tanglin">Tanglin</string>
    <string name="Tengah">Tengah</string>
    <string name="ToaPayoh">Toa Payoh</string>
    <string name="Tuas">Tuas</string>
    <string name="WesternIslands">Western Islands</string>
    <string name="WesternWaterCatchment">Western Water Catchment</string>
    <string name="Woodlands">Woodlands</string>
    <string name="Yishun">Yishun</string>
    <string name="listofdatasourcesused">List of Data Sources Used</string>
    <string name="googlemapsdescription">Provide display of maps, location critical information and navigation routes</string>
    <string name="twitterdescription">Provide updates on train services</string>
    <string name="datagovdescription">Provide weather forecast, PSI level and UV Index information</string>
    <string name="ltadatamalldescription">Provide timely bus timing information for different bus services in Singapore</string>
</resources>