<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/headerbanner"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            app:layout_constraintStart_toStartOf="@+id/tvWeather"
            app:layout_constraintTop_toBottomOf="@+id/tvWeather"
            tools:text="25.4C" />

        <TextView
            android:id="@+id/tvWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:text="Cloudy" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/nav_header_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tvPSI25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tvTemperature"
            app:layout_constraintTop_toBottomOf="@+id/tvTemperature"
            tools:text="PM2.5: 29" />

        <TextView
            android:id="@+id/tvPSI10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/tvPSI25"
            app:layout_constraintTop_toTopOf="@+id/tvPSI25"
            tools:text="PM10: 10" />

        <TextView
            android:id="@+id/tvUV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tvPSI25"
            app:layout_constraintTop_toBottomOf="@+id/tvPSI25"
            tools:text="UV Index: 10" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
